--- a/src/styles/Cards.module.css
+++ b/src/styles/Cards.module.css
@@ -1,3 +1,45 @@
-cards {
+.cards {
+    padding: 20px;
+    width: 100%;
+    background-color: #F2F2F2;
+    border-radius: 15px 15px 15px 15px;
+    order: 0;
+    gap: 20px;
+    background-color: #f6f6f6;
+    border-radius: 25px;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+.cards > .card {
+ 
+}
+.cards > .article {
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    width: 33%;
+    border-radius: 10px;
+    z-index: 4;
+
+}
+
+.imgCard {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    flex-grow: 1;
+    z-index: 2;
+}
+
+.article > .titleLocation {
+   
+    width: 180px;
     color: red;
+    font-weight: 500;
+    z-index: 4;
 }
