--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,48 +1,34 @@
 * {
     margin: 0;
-    padding-left: 30px;
+    padding:0;
 }
 
+
 .header {
+    color: #FF6060;
+    height: 70px;
+    margin: 40px 100px;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 68px;
-    
+    justify-content: space-between;
 }
 
 .header > img {
-    position: absolute;
-    left: 0%;
-    right: 83.04%;
-    top: 0%;
-    bottom: 0%;
-    width: 210.32px;
-    height: 68px;
+    max-width: 220px;
 }
 
 .header > nav {
+    font-size: 24px;
+
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    height: 34px;
-    width: 309px;
 }
 
 .header > a {
-    position: absolute;
-    left: 90.65%;
-    right: 0%;
-    top: 25%;
-    bottom: 25%;
-    font-family: 'Montserrat';
-    font-style: normal;
+    font-size: 44px;
+
+    text-align: end;
+    min-width: 140px;
     font-weight: 500;
-    font-size: 24px;
-    line-height: 142.6%;
-    display: flex;
-    align-items: flex-end;
-    text-align: right;
     color: #FF6060;
     
 }
