--- a/src/styles/Cards.module.css
+++ b/src/styles/Cards.module.css
@@ -1,21 +1,20 @@
 .cards {
     padding: 20px;
     width: 100%;
-    background-color: #F2F2F2;
-    border-radius: 15px 15px 15px 15px;
+    background-color: #f6f6f6;
+    border-radius: 25px;
     order: 0;
     gap: 20px;
     background-color: #f6f6f6;
-    border-radius: 25px;
 
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
 }
-.cards > .card {
+/*.cards > .card {*/
  
-}
+
 .cards > .article {
     position: relative;
     display: flex;
@@ -29,7 +28,8 @@
 .imgCard {
     position: relative;
     z-index: 2;
-    width: 100%;
+    height: 340px;
+    width: 340px;
     border-radius: 10px;
     object-fit: cover;
     flex-grow: 1;
@@ -37,9 +37,11 @@
 }
 
 .article > .titleLocation {
-   
+    position: absolute;
+    bottom: 30px;
+    left: 15px;
     width: 180px;
-    color: red;
+    color: #fff;
     font-weight: 500;
     z-index: 4;
 }
