--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,4 +1,22 @@
-main {
-    margin: 0 100px;
-  
+section {
+    background-color: #f6f6f6;
+    border-radius: 25px;
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr; 
+    gap: 50px 60px; 
+    padding: 55px 50px;
+}
+
+@media screen  and (max-width: 1490px) {
+     .banner {
+        height: 110px;
+        margin-bottom: 20px;
+    }
+
+    section {
+        background-color: unset;
+        gap: 20px 0;
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
 }
