--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -1,4 +1,50 @@
-* {
-
-    color: red;
-}
+.section {
+    border-radius: 5px;
+    margin-bottom: 35px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .header{
+    align-items: center;
+    background-color: #ff6060;
+    border-radius: 5px;
+    display: inline-flex;
+    height: 25%;
+    min-height: 50px;
+    width: 100%;
+  }
+ 
+  .title {
+    color: #ffffff;
+    height: 50px;
+    line-height: 50px;
+    margin: 5px 10px;
+  }
+  
+  .Vector{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+    width: 100%;
+  }
+  .Vector:hover {
+      cursor: pointer;
+  }
+  
+  .Vector.true {
+    justify-content: start;
+    transform: rotate(-180deg);
+  }
+  
+  .description{
+    background-color: #f6f6f6;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: #ff6060;
+    height: 75%;
+    margin-top: -10px;
+    min-height: 100px;
+    padding: 25px 10px 10px 10px;
+  }
