--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -2,7 +2,7 @@
 .Banner {
     border-radius: 25px;
     height: 225px;
-    margin-bottom: 35px;
+    padding: 0 100px 0 100px;
     position: relative;
 }
 .Banner > span {
