--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -13,14 +13,15 @@
 }
 
 .header > img {
-    max-width: 220px;
+    max-width: 340px;
 }
 
 .header > nav {
     font-size: 24px;
-
+    width: 250px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header > a {
