--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-    padding: 0;
+    padding: 0 100px 0 100px;
 
     font-family: "Montserrat", "Segoe UI", "Roboto", "Oxygen", "Helvetica Neue",
         sans-serif;
