--- a/src/styles/Cards.module.css
+++ b/src/styles/Cards.module.css
@@ -1,29 +1,39 @@
 .cards {
-    padding: 20px;
-    width: 100%;
-    background-color: #f6f6f6;
+    height: 850px;
+    background-color: #5e5d5d;
     border-radius: 25px;
     order: 0;
-    gap: 20px;
+    gap: 150px;
     background-color: #f6f6f6;
-
+    flex-wrap: wrap;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+    flex-direction: row;
     align-items: center;
-}
-/*.cards > .card {*/
- 
+    justify-content: space-around;
+    margin-top: 50px;
+    height: 80%;
 
-.cards > .article {
+}
+/*
+ a {
+    flex-grow: 1
+ }
+{*/
+.cards > article {
     height: 340px;
     width: 340px;
     position: relative;
-    display: flex;
+   
     flex-flow: row;
     width: 33%;
     border-radius: 10px;
     z-index: 0;
+    text-decoration: none;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 
 }
 
@@ -31,7 +41,7 @@
     position: relative;
     z-index: 2;
     height: 340px;
-    width: 340px;
+    width: 500px;
     border-radius: 10px;
     object-fit: cover;
     flex-grow: 1;
