--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -1,4 +1,7 @@
-.section {
+
+
+
+section {
     border-radius: 5px;
     margin-bottom: 35px;
     text-align: left;
@@ -14,6 +17,7 @@
     height: 25%;
     min-height: 50px;
     width: 100%;
+    justify-content: space-between;
   }
  
   .title {
@@ -23,28 +27,34 @@
     margin: 5px 10px;
   }
   
-  .Vector{
+  .VectorClose, .VectorOpen{
     display: flex;
     justify-content: flex-end;
     margin-right: 10px;
     width: 100%;
+    cursor: pointer;
+    height: 15px;
+    transform: rotate(90deg);
   }
-  .Vector:hover {
-      cursor: pointer;
+  .VectorOpen {
+    transform: rotate(-90deg);
   }
-  
-  .Vector.true {
-    justify-content: start;
-    transform: rotate(-180deg);
+ .VectorTrue.true:hover {
+      justify-content: start;
+      transform: rotate(+90deg);
+    
   }
+
   
   .description{
-    background-color: #f6f6f6;
+    display: flex;
+    flex-direction: column;
+   
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     color: #ff6060;
-    height: 75%;
+    height: 35px;
     margin-top: -10px;
-    min-height: 100px;
-    padding: 25px 10px 10px 10px;
+    width: 50%;
+   
   }
