--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,12 +1,12 @@
 
-section {
+/*section {
     background-color: #f6f6f6;
     border-radius: 25px;
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr; 
     gap: 50px 60px; 
     padding: 55px 50px;
-}
+}*/
 
 @media screen  and (max-width: 1490px) {
      .banner {
@@ -14,10 +14,10 @@ section {
         margin-bottom: 20px;
     }
 
-    section {
+    /*section {
         background-color: unset;
         gap: 20px 0;
         grid-template-columns: 1fr;
         padding: 0;
-    }
+    }*/
 }
