--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -1,30 +1,70 @@
+/*.Banner {
+  border-radius: 25px;
+  height: 225px;
+  position: relative;
+  margin: 20px 0 40px;
+}
 
-.Banner {
-    border-radius: 25px;
-    height: 225px;
-    position: relative;
+*/
+.Banner>span {
+  display: flex;
+  flex-wrap: nowrap;
+  color: #fff;
+  font-size: 45px;
+  font-weight: 500;
+  left: 48%;
+  position: absolute;
+  top: 60%;
+  transform: translate(-50%, -50%);
 }
-.Banner > span {
-    color: #ffffff;
-    font-size: 48px;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
+
 .Banner > img {
-    filter: brightness(70%);
-    border-radius: 25px;
-    height: 100%;
-    object-fit: cover;
-    width: 100%;
+  filter: brightness(70%);
+  display: grid;
+  place-items: center;
+  height: 220px;
+  border-radius: 25px;
+  width: 100%;
 }
 
+/*
+@media screen and (max-width: 1024px) {
 
-@media screen and (max-width: 1490px) {
-    .banner > span {
-      font-size: 20px;
-      left: 15px;
-      transform: translateY(-50%);
-    }
+  .Banner > span {
+    left: 399px;
   }
+
+}
+@media screen and (max-width: 800px) {
+  .Banner > span{
+  left: 162px;}
+}*/
+@media screen and (min-width: 360px) and (max-width: 1000px) {
+
+  .Banner {
+
+    height: 115px;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(30, 29, 29, 0.325)),
+      url("../assets/bannerMobil.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 9px;
+    margin:0 0 20px;
+
+  }
+
+  .Banner>span {
+    min-width: 65%;
+    font-size: 25px;
+    top: 22%;
+    width: 55%;
+    left: 40%;
+
+    
+  }
+
+  .Banner>img {
+
+    display: none;
+  }
+}
