--- a/src/styles/Cards.module.css
+++ b/src/styles/Cards.module.css
@@ -1,59 +1,54 @@
 .cards {
-    height: 850px;
-    background-color: #5e5d5d;
-    border-radius: 25px;
-    order: 0;
-    gap: 150px;
     background-color: #f6f6f6;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: 50px;
-    height: 80%;
-
+    border-radius: 25px;
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr; 
+    gap: 50px 60px; 
+    padding: 55px 50px;
 }
-/*
- a {
-    flex-grow: 1
- }
-{*/
-.cards > article {
-    height: 340px;
-    width: 340px;
-    position: relative;
-   
-    flex-flow: row;
-    width: 33%;
+
+
+.post {
     border-radius: 10px;
-    z-index: 0;
-    text-decoration: none;
-
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-
+    height: 100%;
+    min-height: 340px;
+    position: relative;
+    cursor: pointer;
+   
 }
+
+.post :hover{
+    
+    color:#FF6060;
+ }
 
 .imgCard {
-    position: relative;
-    z-index: 2;
-    height: 340px;
-    width: 500px;
+    background: linear-gradient(180deg, #130303fd 0%, #f0e7e7f6 100%);
     border-radius: 10px;
+    height: 100%;
     object-fit: cover;
-    flex-grow: 1;
-    z-index: 2;
+    width: 100%;
+
 }
 
 .titleLocation {
-
-    bottom: 30px;
-    left: 15px;
-    width: 180px;
-    color: black;
-    font-weight: 700;
-    z-index: 10;
+    font-weight: 600;
+    bottom: 20px;
+    color: #ffffff;
+    font-size: 18px;
+    left: 20px;
+    margin-right: 20px;
+    position: absolute;
+}
+@media screen and (min-width: 360px) and (max-width: 850px) {
+    .cards{
+        background-color: unset;
+        gap: 20px 0;
+        grid-template-columns: 1fr;
+        padding: 0
+    }
+    
+    .post {
+        min-height: 255px;
+    }
 }
