--- a/src/styles/Error.module.css
+++ b/src/styles/Error.module.css
@@ -1,20 +1,25 @@
 .error_main {
-    min-height: 75vh;
+   text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: #FF6060;
+    margin: 120px 0;
 }
 
 .error_main > h1 {
     font-size: 200px;
+}
+br {
+    display: none;
 }
 
 .error_main > p {
     margin: 20px;
     font-size: 36px;
     font-weight: 500;
+    
 }
 
 .error_main button {
@@ -29,4 +34,19 @@
 
 .error_main button:hover {
     cursor: pointer;
+}
+@media screen and (min-width: 0px) and (max-width: 1000px) {
+    .error_main > h1 {
+        font-size: 122px;
+    }
+    .error_main > p {
+        font-size: 20px;
+    }
+    br {
+        display: flex;
+    }
+    .error_main button {
+        font-size: 13px;
+    }
+
 }
