--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,37 +1,80 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style-type: none;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
 }
+
 .header {
-    color: #FF6060;
-    height: 70px;
-    margin: 40px 100px;
-    display: flex;
-    justify-content: space-between;
+  height: 70px;
+  margin: 25px 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header>img {
+  max-width: 220px;
+}
+
+nav {
+  display: flex;
+    align-items: center;
+
+}
+
+nav,
+.link {
+  color: #ff6060;
+  text-align: end;
+    min-width: 140px;
+    font-weight: 500;
+    font-size: 24px;
+}
+
+
+.linkActive {
+  color: #ff6060;
+  min-width: 80px;
+  margin-left: 25px;
+  border-bottom: 1px solid #ff6060;
+}
+
+/*
+  @media screen and (max-width: 1490px) {
+ 
+  
+    .lien-site {
+      margin: auto 5px;
+    }
+  }
+  */
+
+@media screen and (min-width: 360px) and (max-width: 850px) {
+
+  main {
+    margin: 0 15px 15px;
+}
+
+.header {
+    height: 65px;
+    margin:15px;
+    align-items: center;
 }
 
 .header > img {
-    max-width: 340px;
+    width: 28%;
 }
 
-.header > nav {
-    font-size: 24px;
-    width: 250px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.nav {
+
+    gap: 20px;
 }
 
-.linkActive, .link {
-    font-size: 25px;
-    color: #FF6060;
-    text-align: end;
-    min-width: 140px;
-    font-weight: 500;
-   /* text-transform: uppercase;*/
+.linkActive,
+.link {
+    font-size: 13px;
+    text-transform: uppercase;
+    min-width: 60px;
 }
-.linkActive {
-    text-decoration: underline;
+
 }
