--- a/src/styles/Housing.module.css
+++ b/src/styles/Housing.module.css
@@ -1,61 +1,136 @@
-main {
-    padding: 0 100px 0 100px;
-}
 section {
     display: flex;
     flex-direction: row;
 }
+
 .title {
-    max-width: 80%;
+
     font-weight: 500;
     font-size: 35px;
     line-height: 50px;
     color: #ff6060;
 }
+
 .text {
     font-weight: 500;
     font-size: 25px;
     color: #ff6060;
     margin-bottom: 10px;
 }
+
 .info {
     display: flex;
-    height: 200px;
+    height: 222px;
     flex-direction: row;
     justify-content: space-between;
-
 }
+
+.info>.description {
+    width: 50%;
+}
+
 .ownersInfo {
     display: flex;
     color: #ff6060;
     align-items: center;
+    width: 200px;
+    justify-content: space-between;
+
 }
-.ownersInfo > p{
+
+.ownersInfo>p {
     font-size: 20px;
+    width: 90px;
+    margin-right: 25px;
+    text-align: right;
 }
+
 .imgOwner {
     border-radius: 50%;
     height: 95px;
     width: 95px;
 }
+
 .containerTag {
     display: flex;
-    justify-content: space-between;
-    width: 80%;
-   
+    gap: 15px;
+    width: 100%;
+    margin-top: 35px;
+
 }
 
 /*TAG*/
 .tag {
-    background-color: #ff6060; ;
+    background-color: #ff6060;
+    ;
     color: white;
-    padding: 5px 15px ;
-    border-radius: 25px ;
+    padding: 5px 15px;
+    border-radius: 25px;
+    font-size: 20px;
 }
-.containerDropdown {
 
+.containerDropdown {
+    gap: 40px;
     display: flex;
     height: 100%;
-    gap: 40px;
-    height: 200px;
-  }
+    height: auto;
+}
+
+/*STARS*/
+.containerStars {
+    text-align: right;
+    margin-top: 25px;
+}
+.liste{
+    padding: 15px;
+ } 
+
+
+@media screen and (max-width: 1108px) and (min-width:0px){
+    .info {
+        flex-direction: column;
+        height: 200px;
+        margin-bottom: 40px;
+    }
+
+    .title {
+        font-size: 26px;
+    }
+
+    .text {
+        margin-top: 10px;
+        font-size: 15px;
+    }
+    .tag{
+        padding: 5px 8px;
+        font-size: 12px;
+        border-radius: 8px;
+    }
+    .containerTag {
+        margin: 0;
+    }
+    .owners{
+        margin-top: 30px;
+        height: 80px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+    }
+    .containerStars > img {
+        height: 22px;
+    
+    }
+    .ownersInfo {
+        font-size: 16px;
+    }
+    .imgOwner {
+        height: 78px;
+        width: 78px;
+    }
+    .containerDropdown {
+        flex-direction: column;
+        margin-top: 75px;
+        gap: 0;
+      }
+   
+}
