--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -1,5 +1,3 @@
-
-
 section {
   border-radius: 5px;
   margin-bottom: 35px;
@@ -26,7 +24,7 @@ section {
   margin: 5px 10px;
 }
 
-.header > span{
+.header>span {
   margin: 5px 20px;
 }
 
@@ -62,12 +60,18 @@ section {
   height: auto;
   margin-top: 15px;
   width: 100%;
+
+}
+
+.liste {
+  padding: 10px;
   background-color: #f6f6f6;
 }
 
 .descriptionDropdown {
   padding: 30px;
- 
+  background-color: #f6f6f6;
+
 }
 
 
