--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-   
+
 
     font-family: "Montserrat", "Segoe UI", "Roboto", "Oxygen", "Helvetica Neue",
         sans-serif;
@@ -11,7 +11,11 @@
 main {
     margin: 25px 50px;
 }
+
 @media screen and (min-width: 360px) and (max-width: 850px) {
-header, main {
-    padding: 0 ;
-}}
+
+    header,
+    main {
+        padding: 0;
+    }
+}
