--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -15,6 +15,8 @@
 
 
 .Banner>p {
+  width:100%; 
+  text-align:center;
   color: #ffffff;
   font-size: 48px;
   left: 50%;
@@ -39,14 +41,18 @@
   }
 
   .Banner>p {
+    text-align: center;
     font-size: 37px;
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 578px) {
   .Banner>p {
+    display: flex;
+    left: 15%;
+    flex-direction: column;
     font-size: 27px;
-    left: 30px;
+    text-align: left;
     transform: translateY(-50%);
   }
 }
